fix padding-top on header ith max(), comment out scale effect on submit button since it shifted the layout

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,7 +7,7 @@
   margin-inline: auto;
   padding-inline: clamp(1.125rem, 2vw + 0.5rem, 1.375rem);
   padding-bottom: 1.125rem;
-  padding-top: calc(1 * env(safe-area-inset-top, 20px));
+  padding-top: max(1.125rem, env(safe-area-inset-top, 0px)); 
   background-color: transparent;
   box-sizing: border-box;
   transition:
