--- a/src/components/SubmitButton/SubmitButton.css
+++ b/src/components/SubmitButton/SubmitButton.css
@@ -49,7 +49,7 @@
 }
 
 .submit-button:active {
-  transform: scale(0.98);
+  /* transform: scale(0.98); */
   box-shadow:
     inset 0 0 2rem 0.2rem rgba(255, 255, 255, 0.2),
     inset 0 0 0 0 hsla(247, 64%, 60%, 0),
@@ -61,7 +61,7 @@
   background-color: #D8D3F9;
   color: #F3F1FF;
   cursor: not-allowed;
-  transform: scale(1);
+  /* transform: scale(1); */
   box-shadow: none;
   cursor: default;
 }
