--- a/src/views/Categories/Categories.css
+++ b/src/views/Categories/Categories.css
@@ -3,7 +3,7 @@
   color: #6158b8;
   font-weight: 600;
   font-size: 1.5rem;
-  margin-top: 22px;
+  margin-block: 1rem;
   margin-left: 6px; /* compensation margin */
 }
 
@@ -49,6 +49,10 @@
 }
 
 @media screen and (width >= 768px) {
+.categories__greeting {
+  margin-block: 1.5rem;
+}
+
   .categories-container {
     grid-template-columns: repeat(3, 1fr);
   }
